app/assets/sass/dri/dri.scss
/* ... */
input.dri_request_access_button {
  color: #FFF;
  border: none;
  background-color: #00948F;
  padding: 0;
  margin: 0px 0 20px 0;
  width: 230px;
  height: 26px;
  display: block;
  -moz-border-radius: 2px;
  border-radius: 2px;
}

input.dri_request_access_button:hover {
  background-color: #007F79;
}

/*-------------- MetaData Readview  --------------*/


a.dri_toggle_metadata::after {
  content: ' »';
  font-size: 120%;
  font-weight: bold;
  color: $dri_green;
}

.modal-content {
  padding: 10px;
  .dri_object_metadata_readview {
    max-height: 400px;
    overflow: scroll;
    dl {
      padding: 15px;
    }
  }
  .dri_child_links > a {
    color: $dri_grey;
  }
}

dl.dri_object_metadata_readview {
  margin: 0 0 20px 0;
  padding: 0px 80px 0 0;
  dt {
    margin: 10px 0 0 0;
    padding: 0px;
    color: $dri_grey;
    font-weight: bold;
  }
  dd {
    margin: 0;
    padding: 0;
    color: $dri_greytext;
    a {
      margin: 0 0 0 15px;
      padding: 0;
      display: list-item;
      list-style-type: square;
      color: $dri_greytext;
    }
    a:hover {
      text-decoration: underline;
    }
  }
}

/*-------------- Citation Readview  --------------*/
#dri_citatation_modal_id   {
  .modal-content {
    padding: 15px;
      h4 {
      text-transform: uppercase; 
      } 
  } 
}

/*-------------- Collection status and Features  --------------*/

.dri_object_second_block {
  padding: 0;
  margin: 0;
}

.dri_back_search a {
  padding: 0;
  margin: 10px 0 0 0;
  font-weight: normal;
  display: block;
  font-size: 100%;
  font-weight: bold;
  color: $dri_grey;
}

.dri_back_search a:hover { 
  text-decoration: underline;
}

ul.dri_stats {
  margin: 20px 0 20px 0;
  padding: 4px 0 0px 0;
  width: 230px;
  float: left;
  border-top: 1px solid #E1E1E1;
  border-bottom: 1px solid #E1E1E1;
  li {
    float: left;
    width: 230px;
    display: block;
    margin: 0;
    padding: 2px 0 2px 0;
    list-style: none;
    color: $dri_greytext;
  }
  .dri_stat_num {
    float: right;
  }
}

/*-------------- 320x180 Ratio - Image upload  --------------*/
.dri_vc_image {
  border: 1px solid #E1E1E1;
  width: 230px;
  height: 129px;
  margin: 8px 0 0 0;
  overflow: hidden;
}

.dri_vc_title {
  margin: 20px 0 10px 0;
  color: $dri_grey;
  font-weight: bold;
  a {
    margin: 20px 0 0 0;
    color: $dri_grey;
    font-size: 100%;
  }
  a:hover {
    text-decoration: underline;
  }
}

ul.dri_view_collection {
  margin: 10px 0 0 0;
  padding: 0;
  display: block;
  float: left;
  width: 230px;
  border-bottom: 1px solid #E1E1E1;
  li {
    margin: 0;
    padding: 5px 0 5px 0;
    list-style: none;
    border-top: 1px solid #E1E1E1;
    color: $dri_greytext;
    a {
      list-style: none;
      color: $dri_greytext;
      display: block;
    }
    a:hover {
      color: #505050;
      display: block;
      text-decoration: underline;
    }
    span.dri_stat_num {
      float: right;
      font-size: 100%;
      font-weight: bold;
      color: $dri_greytext;
    }
    a:hover span.dri_stat_num {
      color: #505050;
      float: right;
    }
    i {
      margin-right: 5px;
    }
    input[type="submit"] {
      border: none;
      background: none;
      padding: 1px;
      padding-left: 5px;
    }
    input:focus {
      outline: none;
    }
  }
}

.dri_bookmark_object {
  margin: 20px 0 10px 0;

  display: block;
  float:left; 
 
  form input {
    padding: 0;
	 margin: 0; 
	
  }
  label {
    color: $dri_grey;
    font-weight: bold;	
	   margin: 0;
  	padding-right: 10px;
  		
  }
  
  label.bookmark_object {
    margin: 0;
    padding: 0 0 0 4px; 
	
	
  }
  
  label.dri_bookmark_object_label {
    float: left;
    span.dri_bookmark_label_text {
      padding-left: 6px;
    }
  }
  
  .documentFunctions {
	margin: 0;
  padding: 0;
  a { 
  color: $dri_grey;
  }
  label.bookmark_manage  {
    border-top: 1px solid #E1E1E1;
    padding-top: 5px;
    margin-top: 5px;
    width: 230px;
	
    a {
      color: $dri_grey;
    }
  }
}
}


.dri_title {
  color: $dri_grey;
  font-weight: bold;
  margin: 0 0 4px 0;
  padding: 0;
}

.dri_objecttools_title {
  @extend .dri_object_title_top;
  
  //margin: 20px 0 0 0;
  //padding: 0;
  width: 230px;
  //color: $dri_grey;
  display: block;
  float: left;
  font-weight: bold;
}


/*-------------- publishing institute  --------------*/
.dri_publishing_institute_title {
  margin: 20px 0 5px 0;
  padding: 0;
  width: 230px;
  color: $dri_grey;
  display: block;
  float: left;
  font-weight: bold;
}

.dri_publishing_institute_image {
  border: 1px solid #E1E1E1;
  width: 230px;
  float: left;
}

/*-------------- Institutes  --------------*/
.dri_object_institutes_block {
  border-top: 1px solid #E1E1E1;
  margin: 20px 0 0 0;
  padding: 0;
  display: block;
}

.dri_institutes_title {
  clear:both;
  margin: 20px 0 10px 0;
  color: $dri_grey;
  font-weight: normal;
  font-size: 100%;
  font-weight: bold;
  
}

// static page of institutes
.not_first {
  border-bottom: 1px solid #D9DADB;
}

.dri_collection_institutes_pages {
  margin-bottom: 30px;
  margin-top: 30px;
  clear: both;
  .dri_collection_institutes_pages_img {
    border-right: 1px solid #D9DADB;
    padding-top: -30px;
    padding-bottom: -30px;
    margin-top: 40px;
    margin-bottom: 40px;
    img {
      max-height: 75px;
      max-width: 90%;
    }
  }
  .dri_collection_institutes_pages_text {
    width: 600px;
    margin-top: 25px;
    h6 {
      color: $dri_grey;
    }
    p {
      padding-top: 10px;
      margin-left: 55px;
      color: $dri_greytext;
      clear: both;
    }
    p span.dri_bold_text {
      font-weight: bold;
    }
    p:hover {
      text-decoration: underline;
    }
    ul {
      //float:left;
      li {
        float:left;
        display:block;
        padding: 4px 0 4px 15px;
        list-style: none;
        text-decoration: none;
        max-height: 96px;
        overflow:hidden;
        img {
          
        }
      }
    }
  }
}
/* ... */

